# kotlin.coroutines-cpp

./: .gitignore  .output.txt  AGENTS.md  BATCH5_SUMMARY.md  CLAUDE.md  CMakeLists.txt  IMPORT_FIX_SUMMARY.md  KOTLIN_GC_BRIDGE_SUMMARY.md  LICENSE.txt  NEXT_ACTIONS.md  README.md  RELEASE.md  STUB_ANALYSIS_REPORT.md  SYNTAX_CLEANUP_STATUS.md  TEST_RESULTS.md  TODAYS_WORK.md  analyze_packages.py  analyze_stubs.py  analyze_symbols.py  audit_block_01_test_utils.md  audit_block_03_debug_tests.md  audit_block_06_core_native.md  audit_block_08_core_native_other.md  audit_block_10_core_common_src.md  audit_block_11_benchmarks.md  audit_template.md  extract_import_mismatches.py  gen_cmake_list.py  high_priority_ports.md  implementation_plan.md  import_mismatches.json  kotlin.files.txt  lint_codebase.py  port_status_report.md  test_cancellation.cpp  test_channel  test_comprehensive_suspension.cpp  test_context.cpp  test_context_stubs.cpp  test_dispatchers.cpp  (+7 more)
debugging/: CMakeLists.txt
debugging/src/test/: CoroutinesDumpTest.cpp  DebugProbesTest.cpp  DumpCoroutineInfoAsJsonAndReferencesTest.cpp  DumpWithCreationStackTraceTest.cpp  Example.cpp  RecoveryExample.cpp  RunningThreadStackMergeTest.cpp  SanitizedProbesTest.cpp  StacktraceUtils.cpp  StandardBuildersDebugTest.cpp  StartModeProbesTest.cpp  TestRuleExample.cpp  WithContextUndispatchedTest.cpp
kotlinx-coroutines-core/: CMakeLists.txt
kotlinx-coroutines-core/common/src/: AbstractCoroutine.cpp  Annotations.cpp  Await.cpp  Builders.common.cpp  CancellableContinuation.cpp  CancellableContinuationImpl.cpp  CloseableCoroutineDispatcher.cpp  CompletableDeferred.cpp  CompletableJob.cpp  CompletableJob.hpp  CompletionHandler.common.cpp  CompletionState.cpp  Coroutine.cpp  CoroutineContext.common.cpp  CoroutineDispatcher.cpp  CoroutineExceptionHandler.cpp  CoroutineName.cpp  CoroutineScope.cpp  CoroutineStart.cpp  Debug.common.cpp  Deferred.cpp  Delay.cpp  Dispatchers.common.cpp  Dispatchers.cpp  EventLoop.common.cpp  Exceptions.common.cpp  Guidance.cpp  Job.cpp  JobImpl.cpp  JobImpl.hpp  JobSupport.cpp  JobSupport.hpp  MainCoroutineDispatcher.cpp  NonCancellable.cpp  Runnable.common.cpp  SchedulerTask.common.cpp  Supervisor.cpp  Timeout.cpp  Unconfined.cpp  Waiter.cpp  (+2 more)
kotlinx-coroutines-core/common/test/: AbstractCoroutineTest.cpp  AsyncLazyTest.cpp  AsyncTest.cpp  AtomicCancellationCommonTest.cpp  AwaitCancellationTest.cpp  AwaitTest.cpp  BuilderContractsTest.cpp  CancellableContinuationHandlersTest.cpp  CancellableContinuationTest.cpp  CancellableResumeOldTest.cpp  CancellableResumeTest.cpp  CancelledParentAttachTest.cpp  CompletableDeferredTest.cpp  CompletableJobTest.cpp  CoroutineDispatcherOperatorFunInvokeTest.cpp  CoroutineExceptionHandlerTest.cpp  CoroutineScopeTest.cpp  CoroutinesTest.cpp  DelayDurationTest.cpp  DelayTest.cpp  DispatchedContinuationTest.cpp  DurationToMillisTest.cpp  EmptyContext.cpp  FailedJobTest.cpp  ImmediateYieldTest.cpp  JobExtensionsTest.cpp  JobStatesTest.cpp  JobTest.cpp  LaunchLazyTest.cpp  LimitedParallelismSharedTest.cpp  NonCancellableTest.cpp  ParentCancellationTest.cpp  SupervisorTest.cpp  UnconfinedCancellationTest.cpp  UnconfinedTest.cpp  UndispatchedResultTest.cpp  WithContextTest.cpp  WithTimeoutDurationTest.cpp  WithTimeoutOrNullDurationTest.cpp  WithTimeoutOrNullTest.cpp  (+1 more)
kotlinx-coroutines-core/concurrent/src/: Builders.concurrent.cpp  Dispatchers.cpp  MultithreadedDispatchers.common.cpp
kotlinx-coroutines-core/concurrent/test/: AbstractDispatcherConcurrencyTest.cpp  AtomicCancellationTest.cpp  CommonThreadLocalTest.cpp  ConcurrentExceptionsStressTest.cpp  ConcurrentTestUtilities.common.cpp  DefaultDispatchersConcurrencyTest.cpp  JobStructuredJoinStressTest.cpp  LimitedParallelismConcurrentTest.cpp  MultithreadedDispatcherStressTest.cpp  RunBlockingTest.cpp
kotlinx-coroutines-core/native/src/: Builders.cpp  CloseableCoroutineDispatcher.cpp  CoroutineContext.cpp  Debug.cpp  Dispatchers.cpp  EventLoop.cpp  Exceptions.cpp  MultithreadedDispatchers.cpp  Runnable.cpp  SchedulerTask.cpp
kotlinx-coroutines-core/native/test/: ConcurrentTestUtilities.cpp  DelayExceptionTest.cpp  MultithreadedDispatchersTest.cpp  WorkerTest.cpp
kotlinx-coroutines-core/nativeDarwin/src/: Dispatchers.cpp
kotlinx-coroutines-core/nativeDarwin/test/: Launcher.cpp  MainDispatcherTest.cpp
src/: Builders.common.cpp  CMakeLists.txt  CloseableCoroutineDispatcher.cpp  CoroutineContext.common.cpp  CoroutineDispatcher.cpp  CoroutineExceptionHandler.cpp  CoroutineScope.cpp  CoroutineStart.cpp  Delay.cpp  Dispatchers.common.cpp  Dispatchers.cpp  EventLoop.common.cpp  JobImpl.cpp  MainCoroutineDispatcher.cpp  NonCancellable.cpp  SchedulerTask.common.cpp  Timeout.cpp  Unconfined.cpp
src/kotlinx/coroutines/: AbstractCoroutine.cpp  AbstractCoroutine.hpp  Annotations.cpp  Annotations.hpp  Await.cpp  Await.hpp  Builders.common.cpp  Builders.hpp  CancellableContinuation.cpp  CancellableContinuation.hpp  CancellableContinuationImpl.cpp  CancellableContinuationImpl.hpp  CloseableCoroutineDispatcher.hpp  CompletableDeferred.hpp  CompletableJob.hpp  CompletedExceptionally.hpp  CompletedValue.hpp  CompletionHandler.hpp  CompletionState.hpp  Continuation.hpp  ContinuationImpl.hpp  ContinuationInterceptor.hpp  ContinuationState.hpp  Coroutine.cpp  Coroutine.hpp  CoroutineContext.common.cpp  CoroutineContext.hpp  CoroutineDispatcher.cpp  CoroutineDispatcher.hpp  CoroutineExceptionHandler.cpp  CoroutineExceptionHandler.hpp  CoroutineName.cpp  CoroutineName.hpp  CoroutineScope.hpp  CoroutineStart.hpp  CoroutineStateMachine.hpp  Debug.common.cpp  Deferred.cpp  Deferred.hpp  Delay.cpp  (+35 more)
src/tests/: CMakeLists.txt
src/tests/src/: AbstractCoroutineTest.cpp  AsyncLazyTest.cpp  AsyncTest.cpp  AtomicCancellationCommonTest.cpp  AwaitCancellationTest.cpp  AwaitTest.cpp  BuilderContractsTest.cpp  CancellableContinuationHandlersTest.cpp  CancellableResumeTest.cpp  CancelledParentAttachTest.cpp  CompletableDeferredTest.cpp  CompletableJobTest.cpp  DelayTest.cpp  (+36 more)
tools/clang_suspend_plugin/: CMakeLists.txt  KotlinxSuspendPlugin.cpp  README.md
(+882 files in other folders)
